--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install failed dependencies
+        run: npm install axios vue-axios & npx update-browserslist-db@latest
+
       - name: Build the project
         run: npm run build
 
